# OPSFoundry

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  mainplan.md  pyproject.toml  sample.txt
apps/api/: main.py
apps/frontend/: package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: dashboard.module.css  dashboard.tsx  workflow-selector.module.css  workflow-selector.tsx
core/config/: settings.py
core/documents/: __init__.py  intake.py  ocr.py  storage.py
core/domain/: __init__.py  work_items.py
core/orchestration/: __init__.py  langchain_engine.py
core/persistence/: __init__.py  audit.py  base.py  models.py  session.py  work_items.py  work_items_sql.py
core/runtime/: __init__.py  audit.py  engine.py  evaluation.py  observability.py  request_guard.py  tracker.py
core/workflow_registry/: __init__.py  base.py  registry.py
core/workflows/: __init__.py  base.py  exports.py  extraction.py  registry.py  review.py  validation.py  validation_models.py
mcp_servers/: MCP_SERVER_COOKBOOK.md  __init__.py
mcp_servers/coa_tool/: __init__.py  server.py
mlops/eval_sets/: invoice_eval.json
session/: session1.md
storage/: opsfoundry-local.db
tests/: conftest.py  test_api.py  test_evaluation.py  test_extraction.py  test_intake.py  test_ocr_startup.py  test_registry.py
workflows/: WORKFLOWS_COOKBOOK.md
workflows/invoice_autoposting/: __init__.py  config.yaml  exports.py  parser.py  prompts.py  schemas.py  tools.py  validators.py  workflow.py
(+1 files in other folders)
